--- a/ansible.cfg
+++ b/ansible.cfg
@@ -15,6 +15,7 @@
 inventory          = ./ansible_templates/inventory_aws/tf_aws_ec2.yml
 enable_plugins     = aws_ec2
 interpreter_python = auto_silent
+# ansible_python_interpreter = "/opt/homebrew/bin/python3"
 #library           = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils      = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
 #remote_tmp        = ~/.ansible/tmp
